fix: fixing many to many and joinin table error in creation of user with role prop